added soap stub, fixed pdf generation

--- a/client/templates/accounts/forms.html
+++ b/client/templates/accounts/forms.html
@@ -1,3 +1,3 @@
 <template name="accountsFormInsert">
-    {{> quickForm collection="Accounts" id="insertAccountForm" type="insert"}}
+    {{> quickForm collection="AccountsCollection" id="insertAccountForm" type="insert"}}
 </template>
