--- a/client/templates/dashboard/template.html
+++ b/client/templates/dashboard/template.html
@@ -15,12 +15,18 @@
                 <!-- /.panel-heading -->
                 <div class="panel-body">
                     <p>
-                        <a href="/accounts" type="button" class="btn btn-primary btn-lg navbar-btn"><i class="fa fa-folder"> </i> Accounts</a>
-                        <a href="/account/new" type="button" class="btn btn-primary btn-lg navbar-btn"><i class="fa fa-plus-square"> </i> Create Account</a>
-                        <a href="/contacts" type="button" class="btn btn-primary btn-lg navbar-btn"><i class="fa fa-phone"></i> Contacts</a>
-                        <a href="/contact/new" type="button" class="btn btn-primary btn-lg navbar-btn"><i class="fa fa-plus-square"></i> Create Contact</a>
-                        <a href="/quote" type="button" class="btn btn-primary btn-lg navbar-btn"><i class="fa fa-paperclip"></i> Quotes</a>
-                        <a href="/quote/select" type="button" class="btn btn-primary btn-lg navbar-btn"><i class="fa fa-plus-square"></i> Create Quote</a>
+                        <a href="/accounts" type="button" class="btn btn-primary btn-lg navbar-btn"><i
+                                class="fa fa-folder"> </i> Accounts</a>
+                        <a href="/account/new" type="button" class="btn btn-primary btn-lg navbar-btn"><i
+                                class="fa fa-plus-square"> </i> Create Account</a>
+                        <a href="/contacts" type="button" class="btn btn-primary btn-lg navbar-btn"><i
+                                class="fa fa-phone"></i> Contacts</a>
+                        <a href="/contact/new" type="button" class="btn btn-primary btn-lg navbar-btn"><i
+                                class="fa fa-plus-square"></i> Create Contact</a>
+                        <a href="/quotes" type="button" class="btn btn-primary btn-lg navbar-btn"><i
+                                class="fa fa-paperclip"></i> Quotes</a>
+                        <a href="/quote/select" type="button" class="btn btn-primary btn-lg navbar-btn"><i
+                                class="fa fa-plus-square"></i> Create Quote</a>
                     </p>
                 </div>
                 <!-- /.panel-body -->
