--- a/client/templates/layouts/_sideBar.html
+++ b/client/templates/layouts/_sideBar.html
@@ -1,5 +1,8 @@
 <template name="_sideBar">
+    <a class="navbar-brand" href="/"><img src="/ste.png" width="100px"/></a>
+
     <div class="navbar-default sidebar" role="navigation">
+
         <div class="sidebar-nav navbar-collapse">
             <ul class="nav" id="side-menu">
 
@@ -32,11 +35,9 @@
                     </a>
                     <ul class="nav nav-second-level collapse">
                         <li>
-                            <a href="#">Users</a>
+                            <a href="/settings/email">Email</a>
                         </li>
-                        <li>
-                            <a href="/settings/products">Products</a>
-                        </li>
+
 
                     </ul>
                 </li>
