--- a/client/templates/products/view.html
+++ b/client/templates/products/view.html
@@ -22,44 +22,52 @@
                         <div class="row">
                             <div class="col-lg-6">
                                 <h4>Item Number</h4>
-                                <span class="col-lg-6 editable" data-type="text" data-name="first_name">{{ contact.firstName }}</span>
+                                <span class="col-lg-6 editable" data-type="text"
+                                      data-name="first_name">{{ contact.firstName }}</span>
                             </div>
                             <div class="col-lg-6">
                                 <h4>Last Name</h4>
-                                <span class="col-lg-6 editable" data-type="text" data-name="last_name">{{ contact.lastName }}</span>
+                                <span class="col-lg-6 editable" data-type="text"
+                                      data-name="last_name">{{ contact.lastName }}</span>
                             </div>
                         </div>
                         <!-- /.row -->
                         <div class="row">
                             <div class="col-lg-6">
                                 <h4>Title</h4>
-                                <span class="col-lg-6 editable" data-type="text" data-name="title">{{ contact.title }}</span>
+                                <span class="col-lg-6 editable" data-type="text"
+                                      data-name="title">{{ contact.title }}</span>
                             </div>
                             <div class="col-lg-6">
                                 <h4>Email</h4>
-                                <span class="col-lg-6 editable" data-type="text" data-name="email">{{ contact.email }}</span>
+                                <span class="col-lg-6 editable" data-type="text"
+                                      data-name="email">{{ contact.email }}</span>
                             </div>
                         </div>
                         <!-- /.row -->
                         <div class="row">
                             <div class="col-lg-6">
                                 <h4>Phone</h4>
-                                <span class="col-lg-6 editable" data-type="text" data-name="phone">{{ contact.phone }}</span>
+                                <span class="col-lg-6 editable" data-type="text"
+                                      data-name="phone">{{ contact.phone }}</span>
                             </div>
                             <div class="col-lg-6">
                                 <h4>Phone 2</h4>
-                                <span class="col-lg-6 editable" data-type="text" data-name="phone2">{{ contact.phone2 }}</span>
+                                <span class="col-lg-6 editable" data-type="text"
+                                      data-name="phone2">{{ contact.phone2 }}</span>
                             </div>
                         </div>
                         <!-- /.row -->
                         <div class="row">
                             <div class="col-lg-6">
                                 <h4>Fax</h4>
-                                <span class="col-lg-6 editable" data-type="text" data-name="fax">{{ contact.fax }}</span>
+                                <span class="col-lg-6 editable" data-type="text"
+                                      data-name="fax">{{ contact.fax }}</span>
                             </div>
                             <div class="col-lg-6">
                                 <h4>Account</h4>
-                                <span class="col-lg-6 account" data-type="select2" data-name="account_id"><a href='/account/{{contact.account}}'>{{contact.accountName}}</a></span>
+                                <span class="col-lg-6 account" data-type="select2" data-name="account_id"><a
+                                        href='/account/{{contact.account}}'>{{contact.accountName}}</a></span>
                             </div>
                         </div>
                         <!-- /.row -->
